http://sourceforge.net/forum/message.php?msg_id=1615663
By: jkonkol

Yes fixing the correct server time fixed my authentication problem.
Specifically it was set 6 hours earlier than the computer I was using the frontend
on.  So when zabbix would check to see if I had been connected for longer than
600 seconds it would always fail.

Hope this helps.


Not ready yet:

 - solution for problems with template-based hosts must be proposed

Changes for 1.0beta5:

 - empty result for DBselect is always checked (Alexei)
 - fixed send_email(). According to RFC, DATA should be sent with followed 
 EOL (Alexei)
 - fixed memory leak in main_alerter_loop(). Added DBfree_result(). (Alexei) 
 - fixed missing close of socket in case if connection to SMTP server
 is rejected (Alexei)

Changes for 1.0beta4:

 - ./configure will find libz  to solve problem with MySQL (Alexei)
 - support for service tree (Alexei)
 - vacuuming as part of housekeeping process for PostgreSQL (Alexei)
 - many improvements for PostgreSQL support (Alexei)
 - added item which reflects host status (0-normal, 2-unreachable) (Alexei)
 - fixed function apply_actions() (Alexei)
 - added Next100 and Prev100 for alerts and alarms (Alexei)
 - check permissions for Availability report (Alexei)
 - added parameter SenderFrequency to zabbix_suckerd configuration 
 file (Alexei)
 - added frontends/include/defines.inc.php (Alexei)
 - added column services.algorithm (Alexei)
 - list of test cases added to the Manual (Alexei)
 - emails to be sent in case of TRUE-UNKNOWN-FALSE and v.s. (Alexei)
 - one zabbix_suckerd to send alerts (Alexei)
 - minimum number of zabbix_suckers StartSuckers is set to 3 (Alexei)
 - added alerts.retries (Alexei)
 - added alerts.status (Alexei)
 - status of triggers changes if host/item status has been changed (Alexei)
 - status of triggers is set correctly even if zabbix is restarted (Alexei)
 - php/include/*inc renamed to php/include/*inc.php (Alexei)