@@ -57,7 +57,13 @@
 	        if($col++%2 == 1)	{ echo "<TR BGCOLOR=#DDDDDD>"; }
 		else			{ echo "<TR BGCOLOR=#EEEEEE>"; }
 
-		echo "<TD><a href=\"alarms.php?triggerid=".$row["triggerid"]."\">".$row["description"]."</a></TD>";
+		$description=$row["description"];
+
+		if( strstr($description,"%s"))
+		{
+			$description=expand_trigger_description($row["triggerid"]);
+		}
+		echo "<TD><a href=\"alarms.php?triggerid=".$row["triggerid"]."\">$description</a></TD>";
 		$description=rawurlencode($row["description"]);
 
 		echo "<TD>".explode_exp($row["expression"],1)."</TD>";
